fixing gradient on Safari

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,8 +1,7 @@
 @charset "UTF-8";
 /* RESET PROPERTIES */
 @import url("https://fonts.googleapis.com/css2?family=Croissant+One&family=Dancing+Script&family=Devonshire&family=Kaushan+Script&family=Montserrat&display=swap");
-html, body, div, span, h1, h2, h3, h4, h5, h6, p, a, em, img, u, i, center, ol, ul, li, article, aside,
-footer, header, menu, nav, section, figure {
+html, body, div, span, h1, h2, h3, h4, p, a, img, article, footer, header, menu, section, figure {
   margin: 0;
   padding: 0;
   border: 0;
@@ -17,16 +16,12 @@ html, body {
   color: #fdcb46;
 }
 
-article, aside, footer, header, nav, section {
+article, footer, header, section {
   display: block;
 }
 
 body {
   line-height: 1;
-}
-
-ol, ul {
-  list-style: none;
 }
 
 a {
@@ -192,7 +187,7 @@ p {
 .page--frenchy {
   font-family: "Montserrat";
 }
-.page--frenchy .page-heading {
+.page--frenchy > .page-heading {
   background-image: -webkit-gradient(linear, left top, right top, from(#ca7411), to(#8865dd));
   background-image: -o-linear-gradient(left, #ca7411, #8865dd);
   background-image: linear-gradient(90deg, #ca7411, #8865dd);
@@ -206,7 +201,7 @@ p {
 .page--tasty .page-heading, .page--tasty .page-footer {
   font-family: "Dancing Script", cursive, sans-serif;
 }
-.page--tasty .page-heading {
+.page--tasty > .page-heading {
   background-image: -webkit-gradient(linear, left top, right top, from(#16338f), to(#138dfa));
   background-image: -o-linear-gradient(left, #16338f, #138dfa);
   background-image: linear-gradient(90deg, #16338f, #138dfa);
@@ -220,7 +215,7 @@ p {
 .page--palet .page-heading, .page--palet .page-footer {
   font-family: "Kaushan Script", cursive, sans-serif;
 }
-.page--palet .page-heading {
+.page--palet > .page-heading {
   background-image: -webkit-gradient(linear, left top, right top, from(#47a044), to(#c0fc80));
   background-image: -o-linear-gradient(left, #47a044, #c0fc80);
   background-image: linear-gradient(90deg, #47a044, #c0fc80);
