--- a/sass/components/_pages.scss
+++ b/sass/components/_pages.scss
@@ -62,21 +62,21 @@
         @if $name == "frenchy" {
             &--#{$name} {
                 font-family: "Montserrat";
-                .page-heading {
+                & > .page-heading {
                     @include gradient(90deg, #ca7411, #8865dd);
                 }
             }
         }        
         @else if $name == "tasty" {
             &--#{$name} {
-                .page-heading {
+                & > .page-heading {
                     @include gradient(90deg, #16338f, #138dfa);
                 }
             }
         }
         @else if $name == "palet" {
             &--#{$name} {
-                .page-heading {
+                & > .page-heading {
                     @include gradient(90deg, #47a044, #c0fc80);
                 }
             }
